--- a/css/smb/style.css
+++ b/css/smb/style.css
@@ -953,4 +953,11 @@ div.aligncenter {
 	margin: 0;
 	
 }
+/* for aligning table parts */
+.float-vertical-align {
+  position: relative;
+  bottom: 10%;
+  right: 0;
+  transform: translateY(80%);
+}
 /* End captions */
