--- a/css/smb/style1.css
+++ b/css/smb/style1.css
@@ -249,7 +249,7 @@ ul.list-news li .media-body div{line-height:20px;}
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{ border-color: #e7e7e7;border:none;}
  
 /*Breadcrumb*/
-.breadcrumbs {font-size:11px;padding:0;}
+.breadcrumbs {font-size:11px;padding:0;color:#0A7E5A;}
 .breadcrumbs .list-inline{margin-bottom:0;}
 .breadcrumbs ul  li a{font-size:15px;} 
 .breadcrumbs ul li:last-child {
